--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,18 @@
 	margin-left: 1005px;
 }
 
+.taegeuk {
+	margin-top: -100px;
+	margin-bottom: 30px;
+	margin-left: 400px;
+}
+
+
+.taegeuk2 {
+	margin-top: -100px;
+	margin-bottom: 30px;
+	margin-left: 1005px;
+}
 #main-nav {
 	grid-column: 4/11;
 	margin: 0;
@@ -355,6 +367,16 @@ you work on and the intended audience */
 	text-align: left;
 	font-size: 40px;
 	line-height: 1.5;
+
+}
+
+.Address {
+	grid-column: 1/8;
+	/* Remove as content will dictate height */
+	height: 700px;
+	text-align: left;
+	font-size: 40px;
+	line-height: 1.5;
 	margin-top: 20px;
 }
 
@@ -585,10 +607,3 @@ input[type=text], select, textarea {
 	margin-top: -100px;
 	padding-top: 20px;
 }
-
-
-
-
-
-
-
